wip: working on basic structures and features

--- a/index.scss
+++ b/index.scss
@@ -133,15 +133,78 @@ table {
   src: url("./fonts/static/OpenSans/OpenSans-Medium.ttf");
 }
 
-h1 {
-  font-family: Montserrat;
+// Variables
+:root {
+  --accent-white: #ffffff;
+  --accent-grey: #252525;
+  --accent-green: #19bb07;
+}
+
+body {
+  background-color: var(--accent-grey);
+  color: var(--accent-white);
 }
 
 main {
   font-family: OpenSans;
 }
 
+h1 {
+  font-family: Montserrat;
+}
+
+a {
+  text-decoration: none;
+  color: var(--accent-white);
+}
+
 .primary-header {
   height: 3em;
-  background-color: #8fdbc2;
+}
+
+.primary-nav {
+  background-color: var(--accent-green);
+  position: sticky;
+  top: 0;
+
+  & > ol {
+    display: grid;
+    grid-auto-flow: column;
+
+    & > li {
+      border-inline: 1px solid var(--accent-grey);
+      height: 2em;
+      display: flex;
+
+      & > a {
+        margin: auto;
+      }
+    }
+  }
+}
+
+.intro {
+  padding-top: 2em;
+
+  & > h1 {
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+  & > p {
+    padding-inline: 0.5em;
+    padding-block: 1em;
+  }
+}
+
+.cv {
+  display: flex;
+
+  & > div:focus-within {
+    & > p {
+      background-color: red;
+    }
+  }
 }
