--- a/index.css
+++ b/index.css
@@ -137,15 +137,70 @@ table {
   font-family: OpenSans;
   src: url("./fonts/static/OpenSans/OpenSans-Medium.ttf");
 }
-h1 {
-  font-family: Montserrat;
+:root {
+  --accent-white: #ffffff;
+  --accent-grey: #252525;
+  --accent-green: #19bb07;
+}
+
+body {
+  background-color: var(--accent-grey);
+  color: var(--accent-white);
 }
 
 main {
   font-family: OpenSans;
 }
 
+h1 {
+  font-family: Montserrat;
+}
+
+a {
+  text-decoration: none;
+  color: var(--accent-white);
+}
+
 .primary-header {
   height: 3em;
-  background-color: #8fdbc2;
+}
+
+.primary-nav {
+  background-color: var(--accent-green);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+.primary-nav > ol {
+  display: grid;
+  grid-auto-flow: column;
+}
+.primary-nav > ol > li {
+  border-inline: 1px solid var(--accent-grey);
+  height: 2em;
+  display: flex;
+}
+.primary-nav > ol > li > a {
+  margin: auto;
+}
+
+.intro {
+  padding-top: 2em;
+}
+.intro > h1 {
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+}
+.intro > p {
+  padding-inline: 0.5em;
+  padding-block: 1em;
+}
+
+.cv {
+  display: flex;
+}
+.cv > div:focus-within > p {
+  background-color: red;
 }/*# sourceMappingURL=index.css.map */
