--- a/css/index.scss
+++ b/css/index.scss
@@ -137,7 +137,9 @@ table {
 :root {
   --accent-white: #ffffff;
   --accent-grey: #252525;
+
   --accent-green: #19bb07;
+  --accent-green-dark: #107c04;
 }
 
 body {
@@ -160,19 +162,28 @@ a {
 
 .primary-header {
   height: 3em;
+
+  & > h1 {
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    margin-block: 0.5em;
+  }
 }
 
 .primary-nav {
   background-color: var(--accent-green);
   position: sticky;
   top: 0;
+  grid-column: 2;
 
   & > ol {
     display: grid;
     grid-auto-flow: column;
 
     & > li {
-      border-inline: 1px solid var(--accent-grey);
+      border-inline: 2px solid var(--accent-green-dark);
       height: 2.5em;
       display: flex;
 
@@ -191,29 +202,64 @@ a {
   }
 }
 
-.intro {
-  padding-top: 1.5em;
-  border-left: 3em ridge var(--accent-green);
+.style-wrapper_intro {
+  display: grid;
+  grid-template-columns: 3em 1fr;
+}
 
-  & > h1 {
-    font-size: 2em;
-    font-weight: bold;
-    text-align: center;
-    text-transform: uppercase;
-  }
+.intro_pipe {
+  grid-column: 1;
+  grid-row: 1/3;
+  width: 3em;
+  background:
+    /* radial-gradient(
+        circle at center top,
+        rgb(0, 29, 0) -20%,
+        transparent 100px
+      ), */
+      /* radial-gradient(
+        circle at center top,
+        rgb(0, 29, 0) -20%,
+        transparent 100px
+      ), */ radial-gradient(
+      circle at center top,
+      transparent -25%,
+      rgba(0, 65, 3, 0.752) -5%,
+      transparent 25% 80px
+    ),
+    linear-gradient(
+      to right,
+      rgb(54, 109, 49),
+      rgb(140, 213, 130) 25% 40%,
+      rgb(9, 50, 5)
+    );
+
+  box-shadow: 0em 2em 2em -1em rgb(3, 52, 10) inset;
+}
+
+.intro {
+  // padding-top: 1.5em;
+  // border-left: 3em ridge var(--accent-green);
+  // display: grid;
+  // grid-template-columns: 3em 1fr;
+  grid-column: 2;
 
   & > p {
     padding-inline: 0.5em;
-    padding-block: 1em;
+    background-color: var(--accent-grey);
+    // margin-left: -0.8em;
+    padding-block: 0.1em;
     border-bottom: 0.5em outset var(--accent-green);
     padding-bottom: 1.5em;
+    // todo: fix intro text background
   }
 }
 
 .cv {
   display: grid;
+  padding-bottom: 0.4em;
 
-  --cv-row-height: 2.6em;
+  --cv-row-height: 4em;
 
   :nth-child(2) {
     label {
@@ -256,17 +302,23 @@ a {
       margin-left: auto;
       background: var(--accent-green);
       text-align: center;
-      min-width: 6em;
-      padding-top: 0.8em;
+      min-width: 3.5em;
     }
 
     & > label {
-      border-block: 1px solid var(--accent-grey);
+      border-block: 2px solid var(--accent-green-dark);
+
+      & > img {
+        width: 2em;
+        aspect-ratio: 1/2;
+        // width: 5em;
+        filter: invert(100%);
+        cursor: pointer;
+      }
     }
 
     & > input {
       opacity: 0%;
-      cursor: pointer;
 
       &:checked ~ p {
         // outline: 5px solid green;
@@ -275,9 +327,12 @@ a {
     }
 
     & > p {
-      grid-row: 1;
       display: none;
-      transition: all 0.3s ease 0s;
+      margin-top: 0.8em;
     }
   }
+}
+
+.scr-only {
+  display: none;
 }
