--- a/css/index.css
+++ b/css/index.css
@@ -1,134 +1,3 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
 @font-face {
   font-family: PressStart2P;
   src: url("../fonts/PressStart2P/PressStart2P-Regular.ttf");
@@ -138,14 +7,13 @@ table {
   --accent-blue: #3f68af;
   --accent-green: #19bb07;
   --accent-green-dark: #107c04;
+  --text-yellow: rgb(255, 238, 0);
+  --footer-height: 7em;
 }
 
 body {
   background-color: var(--accent-blue);
   color: var(--accent-white);
-}
-
-main {
   font-family: OpenSans;
 }
 
@@ -155,47 +23,59 @@ a {
 }
 
 .header-primary {
-  min-height: 5em;
   display: grid;
   grid-template-columns: 3em auto;
-  grid-template-rows: 1fr 2.5em;
+  grid-template-rows: 4em 2.5em 4em;
 }
-.header-primary_pipe_wrapper {
+.header-primary .piranha_plant {
+  width: 3.5em;
+  margin-top: auto;
+  margin-left: -0.2em;
+}
+.header-primary_pipe_end_wrapper {
   width: 3.4em;
   grid-row: 2;
 }
-.header-primary_pipe {
+.header-primary_pipe_end {
   height: 100%;
   background: linear-gradient(to right, rgb(54, 109, 49), rgb(140, 213, 130) 15% 25%, rgb(9, 50, 5));
-  border-radius: 0.2em 0.2em 0.2em 0;
+  border-radius: 0 0.2em 0.2em 0;
   box-shadow: inset 0 -0.1em 0.3em rgb(9, 50, 5);
   position: relative;
 }
-.header-primary_pipe_connect {
+.header-primary_pipe_end_connect {
   height: 0.1em;
   position: absolute;
   top: 2%;
   width: 100%;
-  background: linear-gradient(90deg, transparent 5%, rgba(255, 255, 255, 0.563) 20% 22%, transparent 50%);
+  background: linear-gradient(90deg, transparent 5%, rgba(255, 255, 255, 0.563) 10% 12%, transparent 40%);
+}
+.header-primary_pipe {
+  grid-row: 3;
+  width: 3em;
+  height: 100%;
+  background: linear-gradient(to right, rgb(54, 109, 49), rgb(140, 213, 130) 25% 40%, rgb(9, 50, 5));
+  box-shadow: 0em 2em 2em -1em rgb(3, 52, 10) inset;
+  border-bottom: 0.2em solid rgba(53, 116, 47, 0.2);
 }
 .header-primary > h1 {
+  grid-column: 2;
+  grid-row: 3;
+  margin: auto;
+  text-shadow: 1px 1px 1px #000;
+  text-align: center;
+  font-weight: bold;
   font-family: PressStart2P;
   font-size: 1.5em;
-  font-weight: bold;
-  text-align: center;
   text-transform: uppercase;
-  grid-column: 2;
-  grid-row: 2;
-  text-shadow: 1px 1px 1px #000;
   color: rgb(255, 238, 0);
 }
 
 .primary-nav {
-  margin-top: 1em;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  grid-column: 2;
+  z-index: 10;
   width: 100%;
   min-height: 3em;
   background: linear-gradient(to top, rgb(54, 109, 49), rgb(140, 213, 130) 25% 40%, rgb(9, 50, 5));
@@ -207,6 +87,14 @@ a {
 .primary-nav > ol > li {
   height: 3.5em;
   display: flex;
+}
+.primary-nav > ol > li > a {
+  margin: auto;
+  font-size: 0.75em;
+  text-shadow: 2px 2px 2px rgb(99, 103, 5);
+  font-family: PressStart2P;
+  text-transform: uppercase;
+  color: var(--text-yellow);
 }
 .primary-nav > ol > li::after {
   content: "";
@@ -221,9 +109,6 @@ a {
 .primary-nav > ol > li:last-of-type {
   border-right: 0;
 }
-.primary-nav > ol > li > a {
-  margin: auto;
-}
 
 .style-wrapper_intro {
   display: grid;
@@ -235,7 +120,7 @@ a {
   grid-row: 1/3;
   width: 3em;
   background: linear-gradient(to right, rgb(54, 109, 49), rgb(140, 213, 130) 25% 40%, rgb(9, 50, 5));
-  box-shadow: 0em 2em 2em -1em rgb(3, 52, 10) inset;
+  box-shadow: 0em 1.7em 2.5em -1em rgb(3, 52, 10) inset;
   border-bottom: 0.2em solid rgba(53, 116, 47, 0.2);
 }
 
@@ -250,27 +135,16 @@ a {
 
 .cv {
   display: grid;
-  padding-bottom: 0.4em;
   grid-template-rows: 1fr auto;
-  --cv-row-height: 4em;
-}
-.cv :nth-child(3) label {
-  border-top: 0;
+  --cv-icon-divider-height: 1.2em;
+  --cv-input-height: 6em;
+  --cv-input-plus-divider-height: 7.2em;
 }
 .cv :nth-child(4) p {
-  margin-top: calc(var(--cv-row-height) * -1);
+  margin-top: calc(var(--cv-input-plus-divider-height) * -1);
 }
 .cv :nth-child(5) p {
-  margin-top: calc(var(--cv-row-height) * -2);
-}
-.cv legend {
-  font-size: 1.8em;
-  text-transform: uppercase;
-  padding-block: 0.2em;
-  text-align: center;
-  background-color: var(--accent-green);
-  width: 100%;
-  grid-row: 1;
+  margin-top: calc(var(--cv-input-plus-divider-height) * -2);
 }
 .cv .cv_pipe {
   display: grid;
@@ -294,48 +168,109 @@ a {
   background: linear-gradient(to top, rgb(54, 109, 49), rgb(140, 213, 130) 25% 40%, rgb(20, 80, 15));
 }
 .cv .cv_pipe > h2 {
-  text-align: center;
   grid-row: 1;
   grid-column: 3;
+  font-size: 1.5em;
+  margin-block: auto;
+  text-align: center;
   text-transform: uppercase;
   text-shadow: 1px 1px 1px #000;
   color: rgb(255, 238, 0);
   font-family: PressStart2P;
-  font-size: 1.5em;
 }
 .cv_elements {
   display: grid;
-  grid-template-columns: 1fr 7em;
-  grid-template-rows: var(--cv-row-height);
+  grid-template-columns: 1fr 4em;
+  grid-template-rows: var(--cv-icon-divider-height) var(--cv-input-height);
   padding-left: 0.5em;
 }
-.cv_elements > input,
-.cv_elements label {
+.cv_elements_divider {
+  width: 3.7em;
+  grid-column: 2;
   grid-row: 1;
+  margin-left: auto;
+  background: linear-gradient(to right, rgb(65, 124, 60), rgb(140, 213, 130) 25% 40%, rgb(9, 50, 5));
+  box-shadow: 0em 1em 1em -1em rgb(5, 62, 14) inset;
+  border-radius: 0.15em 0 0 0.15em;
+}
+.cv_elements > input,
+.cv_elements > label {
+  grid-row: 2;
   grid-column: 2;
   margin-left: auto;
-  background: var(--accent-green);
-  text-align: center;
-  min-width: 3.5em;
+  width: 3.5em;
+  height: --cv-input-height;
+  cursor: pointer;
 }
 .cv_elements > label {
-  border-block: 2px solid var(--accent-green-dark);
+  background: linear-gradient(to right, rgb(65, 124, 60), rgb(140, 213, 130) 25% 40%, rgb(9, 50, 5));
+  box-shadow: 0em 1em 1em -1em rgb(5, 62, 14) inset;
+  display: flex;
+  flex-direction: column;
 }
 .cv_elements > label > img {
   width: 2em;
-  aspect-ratio: 1/2;
+  margin: auto;
   filter: invert(100%);
-  cursor: pointer;
 }
 .cv_elements > input {
   opacity: 0%;
 }
 .cv_elements > input:checked ~ p {
+  height: 100%;
   display: inline-block;
 }
 .cv_elements > p {
+  grid-row: 1;
+  grid-column: 1;
   display: none;
-  margin-top: 0.8em;
+  padding-top: 0.8em;
+}
+.cv_elements_divider_last {
+  width: 3.7em;
+  height: var(--cv-icon-divider-height);
+  background-color: red;
+  margin-left: auto;
+  background: linear-gradient(to right, rgb(65, 124, 60), rgb(140, 213, 130) 25% 40%, rgb(9, 50, 5));
+  box-shadow: 0em 1em 1em -1em rgb(5, 62, 14) inset;
+  border-radius: 0.15em 0 0 0.15em;
+}
+
+footer .footer-spacer {
+  grid-row: 1;
+  height: var(--footer-height);
+  width: 100%;
+  background-color: sandybrown;
+}
+footer .footer_container {
+  position: fixed;
+  bottom: 0;
+  display: grid;
+  grid-template-rows: 1em 1fr;
+  grid-template-columns: 1fr;
+  width: 100%;
+  height: var(--footer-height);
+}
+footer .footer_container > .footer-border-1 {
+  grid-row: 1;
+  grid-column: 1;
+  box-shadow: 0 -0.2em 0.3em rgb(26, 115, 18);
+  background-color: greenyellow;
+  background: linear-gradient(to top, #adff2f, rgb(20, 86, 13));
+}
+footer .footer_container > .footer-border-2 {
+  grid-row: 1;
+  grid-column: 1;
+  height: 30%;
+  margin-top: auto;
+  background: linear-gradient(225deg, #437831 25%, transparent 25%) -3px 0, linear-gradient(135deg, #437831 25%, transparent 25%) -3px 0, linear-gradient(315deg, #437831 25%, transparent 25%), linear-gradient(45deg, #437831 25%, transparent 25%);
+  background-size: 6px 6px;
+}
+footer .footer_container > .test2 {
+  grid-row: 2;
+  background: linear-gradient(135deg, rgba(146, 102, 20, 0.5019607843) 50%, transparent 0), linear-gradient(-135deg, rgba(146, 102, 20, 0.5019607843) 50%, transparent 0);
+  background-size: 1em 1em;
+  background-color: #f4a460;
 }
 
 .scr-only {
