--- a/css/index.scss
+++ b/css/index.scss
@@ -1,159 +1,37 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
 @font-face {
   font-family: PressStart2P;
   src: url("../fonts/PressStart2P/PressStart2P-Regular.ttf");
 }
 
-// @font-face {
-//   font-family: Montserrat;
-//   src: url("./fonts/montserrat/Montserrat-Medium.ttf");
-// }
-
-// @font-face {
-//   font-family: OpenSans;
-//   src: url("./fonts/static/OpenSans/OpenSans-Medium.ttf");
-// }
-
-// Variables
+// Global Variables
 :root {
+  // Colors
   --accent-white: #ffffff;
   --accent-blue: #3f68af;
 
   --accent-green: #19bb07;
   --accent-green-dark: #107c04;
+
+  --text-yellow: rgb(255, 238, 0);
+
+  // Sizes
+  --footer-height: 7em;
+}
+
+html {
+  // overflow-y: hidden;
 }
 
 body {
   background-color: var(--accent-blue);
   color: var(--accent-white);
+  // min-height: 100%;
+  font-family: OpenSans;
 }
 
 main {
-  font-family: OpenSans;
+  // overflow-y: auto;
+  // margin-bottom: 10em;
 }
 
 a {
@@ -162,17 +40,25 @@ a {
 }
 
 .header-primary {
-  min-height: 5em;
+  // position: absolute;
+  // min-height: 5em;
+
   display: grid;
   grid-template-columns: 3em auto;
-  grid-template-rows: 1fr 2.5em;
+  grid-template-rows: 4em 2.5em 4em;
 
-  &_pipe_wrapper {
+  & .piranha_plant {
+    width: 3.5em;
+    margin-top: auto;
+    margin-left: -0.2em;
+  }
+
+  &_pipe_end_wrapper {
     width: 3.4em;
     grid-row: 2;
   }
 
-  &_pipe {
+  &_pipe_end {
     height: 100%;
     background: linear-gradient(
       to right,
@@ -180,7 +66,7 @@ a {
       rgb(140, 213, 130) 15% 25%,
       rgb(9, 50, 5)
     );
-    border-radius: 0.2em 0.2em 0.2em 0;
+    border-radius: 0 0.2em 0.2em 0;
     box-shadow: inset 0 -0.1em 0.3em rgb(9, 50, 5);
 
     position: relative;
@@ -193,31 +79,49 @@ a {
       background: linear-gradient(
         90deg,
         transparent 5%,
-        rgba(255, 255, 255, 0.563) 20% 22%,
-        transparent 50%
+        rgba(255, 255, 255, 0.563) 10% 12%,
+        transparent 40%
       );
     }
   }
 
+  &_pipe {
+    // grid-column: 1;
+    grid-row: 3;
+    width: 3em;
+    height: 100%;
+
+    background: linear-gradient(
+      to right,
+      rgb(54, 109, 49),
+      rgb(140, 213, 130) 25% 40%,
+      rgb(9, 50, 5)
+    );
+
+    box-shadow: 0em 2em 2em -1em rgb(3, 52, 10) inset;
+
+    border-bottom: 0.2em solid rgba(53, 116, 47, 0.2);
+  }
+
   & > h1 {
+    grid-column: 2;
+    grid-row: 3;
+    margin: auto;
+    text-shadow: 1px 1px 1px #000;
+    text-align: center;
+    font-weight: bold;
     font-family: PressStart2P;
     font-size: 1.5em;
-    font-weight: bold;
-    text-align: center;
     text-transform: uppercase;
-    // margin-block: 0.5em;
-    grid-column: 2;
-    grid-row: 2;
-    text-shadow: 1px 1px 1px #000;
     color: rgb(255, 238, 0);
   }
 }
 
 .primary-nav {
-  margin-top: 1em;
   position: sticky;
   top: 0;
-  grid-column: 2;
+  // grid-column: 2;
+  z-index: 10;
 
   width: 100%;
   min-height: 3em;
@@ -237,6 +141,15 @@ a {
       // border-inline: 2px solid var(--accent-green-dark);
       height: 3.5em;
       display: flex;
+
+      & > a {
+        margin: auto;
+        font-size: 0.75em;
+        text-shadow: 2px 2px 2px rgb(99, 103, 5);
+        font-family: PressStart2P;
+        text-transform: uppercase;
+        color: var(--text-yellow);
+      }
 
       &::after {
         content: "";
@@ -260,10 +173,6 @@ a {
       &:last-of-type {
         border-right: 0;
       }
-
-      & > a {
-        margin: auto;
-      }
     }
   }
 }
@@ -277,32 +186,15 @@ a {
   grid-column: 1;
   grid-row: 1/3;
   width: 3em;
-  background:
-    /* radial-gradient(
-        circle at center top,
-        rgb(0, 29, 0) -20%,
-        transparent 100px
-      ), */
-      /* radial-gradient(
-        circle at center top,
-        rgb(0, 29, 0) -20%,
-        transparent 100px
-      ), 
-      */
-    //    radial-gradient(
-    //   circle at center top,
-    //   transparent -25%,
-    //   rgba(0, 65, 3, 0.752) -5%,
-    //   transparent 25% 80px
-    // ),
-    linear-gradient(
+
+  background: linear-gradient(
     to right,
     rgb(54, 109, 49),
     rgb(140, 213, 130) 25% 40%,
     rgb(9, 50, 5)
   );
 
-  box-shadow: 0em 2em 2em -1em rgb(3, 52, 10) inset;
+  box-shadow: 0em 1.7em 2.5em -1em rgb(3, 52, 10) inset;
 
   border-bottom: 0.2em solid rgba(53, 116, 47, 0.2);
 }
@@ -323,39 +215,34 @@ a {
 
 .cv {
   display: grid;
-  padding-bottom: 0.4em;
   grid-template-rows: 1fr auto;
 
-  --cv-row-height: 4em;
+  --cv-icon-divider-height: 1.2em;
+  --cv-input-height: 6em;
 
-  :nth-child(3) {
-    label {
-      border-top: 0;
-      // border-radius: 1em 0 0 0;
-    }
-  }
+  --cv-input-plus-divider-height: 7.2em;
 
   :nth-child(4) {
     p {
-      margin-top: calc(var(--cv-row-height) * -1);
+      margin-top: calc(var(--cv-input-plus-divider-height) * -1);
     }
   }
 
   :nth-child(5) {
     p {
-      margin-top: calc(var(--cv-row-height) * -2);
+      margin-top: calc(var(--cv-input-plus-divider-height) * -2);
     }
   }
 
-  legend {
-    font-size: 1.8em;
-    text-transform: uppercase;
-    padding-block: 0.2em;
-    text-align: center;
-    background-color: var(--accent-green);
-    width: 100%;
-    grid-row: 1;
-  }
+  // legend {
+  //   font-size: 1.8em;
+  //   text-transform: uppercase;
+  //   padding-block: 0.2em;
+  //   text-align: center;
+  //   background-color: var(--accent-green);
+  //   width: 100%;
+  //   grid-row: 1;
+  // }
 
   .cv_pipe {
     display: grid;
@@ -405,58 +292,158 @@ a {
     }
 
     & > h2 {
-      text-align: center;
       grid-row: 1;
       grid-column: 3;
+      font-size: 1.5em;
+      margin-block: auto;
+      text-align: center;
       text-transform: uppercase;
       text-shadow: 1px 1px 1px #000;
       color: rgb(255, 238, 0);
       font-family: PressStart2P;
-      font-size: 1.5em;
     }
   }
 
   &_elements {
-    // grid-row: 2;
     display: grid;
-    grid-template-columns: 1fr 7em;
-    grid-template-rows: var(--cv-row-height);
+    grid-template-columns: 1fr 4em;
+    grid-template-rows: var(--cv-icon-divider-height) var(--cv-input-height);
     padding-left: 0.5em;
 
-    & > input,
-    label {
+    &_divider {
+      width: 3.7em;
+      grid-column: 2;
       grid-row: 1;
+      margin-left: auto;
+      background: linear-gradient(
+        to right,
+        rgb(65, 124, 60),
+        rgb(140, 213, 130) 25% 40%,
+        rgb(9, 50, 5)
+      );
+      box-shadow: 0em 1em 1em -1em rgb(5, 62, 14) inset;
+      border-radius: 0.15em 0 0 0.15em;
+    }
+
+    & > input,
+    > label {
+      grid-row: 2;
       grid-column: 2;
       margin-left: auto;
-      background: var(--accent-green);
-      text-align: center;
-      min-width: 3.5em;
+      // background: var(--accent-green);
+      // width: 3.5em;
+      width: 3.5em;
+      height: --cv-input-height;
+      // height: 100%;
+      cursor: pointer;
     }
 
     & > label {
-      border-block: 2px solid var(--accent-green-dark);
+      background: linear-gradient(
+        to right,
+        rgb(65, 124, 60),
+        rgb(140, 213, 130) 25% 40%,
+        rgb(9, 50, 5)
+      );
 
+      // box-shadow: 0em 2em 2em -1em rgb(3, 52, 10) inset;
+      box-shadow: 0em 1em 1em -1em rgb(5, 62, 14) inset;
+
+      display: flex;
+      flex-direction: column;
+      // width: 0;
       & > img {
         width: 2em;
-        aspect-ratio: 1/2;
-        // width: 5em;
+        // height: 2em;
+        margin: auto;
         filter: invert(100%);
-        cursor: pointer;
       }
     }
 
     & > input {
       opacity: 0%;
+      // z-index: 1;
 
       &:checked ~ p {
-        // outline: 5px solid green;
+        height: 100%;
         display: inline-block;
       }
     }
 
     & > p {
+      grid-row: 1;
+      grid-column: 1;
       display: none;
-      margin-top: 0.8em;
+      padding-top: 0.8em;
+    }
+  }
+
+  &_elements_divider_last {
+    width: 3.7em;
+    height: var(--cv-icon-divider-height);
+    background-color: red;
+    margin-left: auto;
+
+    background: linear-gradient(
+      to right,
+      rgb(65, 124, 60),
+      rgb(140, 213, 130) 25% 40%,
+      rgb(9, 50, 5)
+    );
+    box-shadow: 0em 1em 1em -1em rgb(5, 62, 14) inset;
+    border-radius: 0.15em 0 0 0.15em;
+  }
+}
+
+footer {
+  & .footer-spacer {
+    grid-row: 1;
+    height: var(--footer-height);
+    width: 100%;
+    background-color: sandybrown;
+    // margin-block: 2.5em;
+  }
+
+  & .footer_container {
+    position: fixed;
+    bottom: 0;
+
+    display: grid;
+    grid-template-rows: 1em 1fr;
+    grid-template-columns: 1fr;
+
+    width: 100%;
+    height: var(--footer-height);
+
+    & > .footer-border-1 {
+      grid-row: 1;
+      grid-column: 1;
+      box-shadow: 0 -0.2em 0.3em rgb(26, 115, 18);
+      background-color: greenyellow;
+      background: linear-gradient(to top, #adff2f, rgb(20, 86, 13));
+    }
+
+    & > .footer-border-2 {
+      grid-row: 1;
+      grid-column: 1;
+      height: 30%;
+      margin-top: auto;
+      background: linear-gradient(225deg, #437831 25%, transparent 25%) -3px 0,
+        linear-gradient(135deg, #437831 25%, transparent 25%) -3px 0,
+        linear-gradient(315deg, #437831 25%, transparent 25%),
+        linear-gradient(45deg, #437831 25%, transparent 25%);
+
+      background-size: 6px 6px;
+      // background-color: #437831;
+      // background-color: greenyellow;
+    }
+
+    & > .test2 {
+      grid-row: 2;
+      background: linear-gradient(135deg, #92661480 50%, transparent 0),
+        linear-gradient(-135deg, #92661480 50%, transparent 0);
+      background-size: 1em 1em;
+      background-color: #f4a460;
     }
   }
 }
